# stal

./: CMakeLists.txt  CMakePresets.json  preinclude.h
common/: CMakeLists.txt
common/src/common/cavehook/: Allocator.cpp  Allocator.h  CaveHook.cpp  CaveHook.h  Errors.h
common/src/common/cheat/: cheat.h
common/src/common/cheat/feature/: feature.cpp  feature.h
common/src/common/math/: axis_aligned_bounding_box.h  math.h  matrix3x4.h  matrix4x4.h  quaternion.h  rect.h  vector2.h  vector3.h
common/src/common/memory/: local_ptr.h  memory.h  remote_ptr.h  windows_impl.cpp  windows_impl.h
common/src/common/overlay/: deffered_renderer.h  directx11_win32_overlay.cpp  directx11_win32_overlay.h  overlay.h  renderer.h  win32_overlay.cpp  win32_overlay.h
common/src/common/pattern/: signature.cpp  signature.h
common/src/common/resource/: resource.h  resource_manager.cpp  resource_manager.h
common/src/common/resource/directx11/: directx11_image.cpp  directx11_image.h  directx11_image_resource_manager.cpp  directx11_image_resource_manager.h
common/src/common/resource/font/: font.h  (+1 more)
common/src/common/util/: easings.h  process.cpp  process.h
menu/: CMakeLists.txt
menu/resource/image/: vazelin.c
menu/src/esp/: box_esp_element.h  corner_box_esp_element.h  esp_element.h  esp_preview.h  fade_esp_element.h  healthbar_esp_element.h  name_esp_element.h
menu/src/menu/: feature_renderer.cpp  feature_renderer.h  gui.cpp  gui.h  gui_state.h  sidebar.cpp  sidebar.h
menu/src/menu/element/: bind_renderer.cpp  bind_renderer.h  color_renderer.cpp  color_renderer.h  combobox_renderer.cpp  combobox_renderer.h  element_renderer.cpp  element_renderer.h  esp_preview_renderer.cpp  esp_preview_renderer.h  frame_renderer.cpp  frame_renderer.h  slider_renderer.cpp  slider_renderer.h  toggle_renderer.cpp  toggle_renderer.h
source_sdk/: CMakeLists.txt
source_sdk/src/source/: c_utl_vector.h  entity_system.cpp  entity_system.h
source_sdk/src/source/classes/: classes.h
source_sdk/src/source/handle/: c_base_handle.h  c_handle.h  c_strong_handle.h
source_sdk/src/source/schema/: c_schema_class.cpp  c_schema_class.h  c_schema_field.cpp  c_schema_field.h  c_type_scope.cpp  c_type_scope.h  schema_parser.cpp  schema_parser.h
source_sdk/src/source/util/: esp_helper.h
stalcraft/: CMakeLists.txt
stalcraft/src/: gl_constants.h  main.cpp
stalcraft/src/cheat/: stalcraft.cpp  stalcraft.h
stalcraft/src/feature/: chams.cpp  chams.h
stalcraft/src/hook/: gl_draw_elements.cpp  gl_draw_elements.h  swapbuffers.cpp  swapbuffers.h
stalcraft/src/material/: glass.cpp  glass.h  material.h  material_set.h  metallic.cpp  metallic.h  vazelin.cpp  vazelin.h  wireframe.cpp  wireframe.h
(+23 files in other folders)
